@@ -11,6 +11,8 @@ __thiscall std_vector_uint * Entity_Knife::GetHitEntities();
 __thiscall void Entity_Knife::Constructor();
 
 struct Entity_Knife : public Entity {
+	bool _isSwinging : 0x3b5;
+
 	__vtable {
 		skip; // Free
 		skip; // Init
